# Fortesque

./: .gitignore  Fortesque.sln  Fortesque.vcxproj  Fortesque.vcxproj.filters  README.md  WORKSPACE.bazel  build.bat  shader.vs  shader_s.h  test.cpp
doc/: gdb_debugger.md
lib/: dear_imgui.BUILD  glad.c  imgui.BUILD
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
script/: build.bat  test.bat
script/test/: all.bat
scripts/: build.ps1  run.ps1  setup.ps1
src/: camera.cpp  camera.h  fortesque.cpp  fortesque.h  shader.cpp  shader.h  texture_shader.fs
src/lighting_example/: main.cpp  main.h
src/shaders/: basic_lighting.fs  basic_lighting.vs  lamp_cube.fs  lamp_cube.vs  lighting.fs
src/test/fake/: BUILD.bazel  stub.cpp
src/test/hello_world/: BUILD.bazel  test.cpp
src/textures_example/: camera.cpp  camera.h  main.cpp  main.h
tools/: build.ps1
tools/setup/: configure_environment.ps1  configure_libraries.ps1  working_directory.ps1
tools/setup/downloads/: assimp.ps1  cmake.ps1  gcc.ps1  glad.ps1  glfw.ps1  googletest.ps1
