workspace(name = "fortesque")

load(
  "@bazel_tools//tools/build_defs/repo:http.bzl",
  "http_archive", "http_file"
)

http_archive(
  name = "googletest",
  urls = [
    "https://github.com/google/googletest/archive/refs/tags/release-1.12.1.zip"
  ],
  strip_prefix = "googletest-release-1.12.1",
  sha256 = "24564e3b712d3eb30ac9a85d92f7d720f60cc0173730ac166f27dda7fed76cb2"
)

http_file(
  name = "vulkan_sdk_installer",
  executable = True,
  sha256 = "0b21c602ef0d62ee49c39e03b35207d136130bf110682d7cad2c620265031dcc",
  urls = [
    "https://sdk.lunarg.com/sdk/download/1.3.236.0/windows/VulkanSDK-1.3.236.0-Installer.exe"]
)
