workspace(name = "fortesque")

load(
  "@bazel_tools//tools/build_defs/repo:http.bzl",
  "http_archive"
)

http_archive(
  name = "googletest",
  urls = [
    "https://github.com/google/googletest/archive/refs/tags/release-1.12.1.zip"
  ],
  strip_prefix = "googletest-release-1.12.1",
  sha256 = "24564e3b712d3eb30ac9a85d92f7d720f60cc0173730ac166f27dda7fed76cb2"
)

http_archive(
  name = "imgui",
  urls = [
    "https://github.com/ocornut/imgui/archive/refs/tags/v1.89.1.zip"],
  strip_prefix = "imgui-1.89.1",
  sha256 = "6813982f9b48e79da93e8c6bf9afeb806eeeaaccc1a84588e3ece64fa0a15824",
  build_file = "@//lib:imgui.BUILD",
)
